# bohay

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MODULE-GUIDE.md  README.md  SECURITY.md  flake.nix  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: bohay.rb
changelog/: v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.3.md  v0.9.0.md  v0.9.1.md  v0.9.2.md
examples/modules/: README.md
examples/modules/agent-ping/: bohay-module.toml  ping.py
examples/modules/branch-dock/: bohay-module.toml  checkout.sh  refresh.sh
examples/modules/file-tree/: README.md  bohay-module.toml  lib.sh  open.sh  render.sh  toggle.sh
examples/modules/scratch-pane/: bohay-module.toml  notes.js  open.js  stash.js
scripts/: changelog.sh  release.sh
src/: agent.rs  cli.rs  config.rs  detect.rs  event.rs  integration.rs  layout.rs  main.rs  persist.rs  platform.rs
src/app/: board.rs  dispatch.rs  files.rs  git.rs  input.rs  keys.rs  mod.rs  modules.rs  picker.rs  settings.rs  switcher.rs
src/files/: mod.rs  view.rs
src/git/: github.rs  local.rs  mod.rs  model.rs
src/i18n/: mod.rs
src/ipc/: api.rs  client.rs  protocol.rs  server.rs  transport.rs
src/module/: context.rs  install.rs  manifest.rs  mod.rs  paths.rs  registry.rs  runtime.rs  settings.rs
src/orch/: mod.rs
src/terminal/: pty.rs
src/terminal/vt/: alacritty.rs  mod.rs
src/ui/: board.rs  borders.rs  cmdinfo.rs  files.rs  git.rs  help.rs  menu.rs  mod.rs  panes.rs  picker.rs  settings.rs  sidebar.rs  status.rs  switcher.rs  tabbar.rs  theme.rs
website/: astro.config.mjs  package-lock.json  package.json  wrangler.toml
(+29 files in other folders)
