[package]
name = "bohay"
version = "0.8.2"
edition = "2021"
rust-version = "1.82"
description = "Next-Gen Agents multiplexer"
authors = ["Riz <rizflagz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RizRiyz/bohay"
repository = "https://github.com/RizRiyz/bohay"
documentation = "https://bohay.dev/docs/"
keywords = ["terminal", "multiplexer", "tui", "agents", "workspace"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate lean: ship source + README + license, not the design
# notes, previews, or CI/packaging files.
exclude = [
    "/docs",
    "/changelog",
    "/.github",
    "/assets",
    "/preview.html",
    "/preview.ans",
    "/MODULE-GUIDE.md",
    "/examples",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/install.sh",
    "/install.ps1",
    "/RELEASING.md",
    "/scripts",
    "/website",
]

[[bin]]
name = "bohay"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["serde"] }
portable-pty = "0.9"
alacritty_terminal = "0.26"
unicode-width = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Module manifests (`bohay-module.toml`).
toml = "0.8"
# Format-preserving TOML edits (Kimi's `~/.kimi-code/config.toml` holds the
# user's API keys + comments, so we edit it in place without a lossy round-trip).
toml_edit = "0.22"
bincode = { version = "2", features = ["serde"] }
# Cross-platform local IPC: Unix-domain sockets on Unix, named pipes on Windows.
interprocess = "2"

# `libc` (setsid + macOS proc_pidinfo) is only needed on Unix.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
strip = true
